# PyArchitecture

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  release_notes.rst
.github/workflows/: functional-tests.yaml  python-publish.yaml
phydisk/: __init__.py  macOS.py  models.py  windows.py
pyarchitecture/: __init__.py  config.py  memory.py  models.py  squire.py
pyarchitecture/cpu/: __init__.py  main.py
pyarchitecture/disks/: __init__.py  linux.py  macOS.py  windows.py
pyarchitecture/gpu/: __init__.py  main.py
pyarchitecture/memory/: __init__.py  linux.py  macOS.py  main.py  windows.py
pydisk/: __init__.py  macOS.py  squire.py  windows.py
tests/: functional.py
