[project]
name = "PhyDisk"
dynamic = ["version"]
description = "Python module to get physical drives connected to a host machine"
readme = "README.md"
authors = [{ name = "Vignesh Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Topic :: System :: Hardware",
]
keywords = ["physical-drives", "PhyDisk"]
requires-python = ">=3.10"

[tool.setuptools]
packages = [
    "phydisk"
]

[tool.setuptools.dynamic]
version = {attr = "phydisk.version"}

[project.optional-dependencies]
dev = ["pre-commit"]
standard = [
    "Jinja2==3.1.*",
    "requests==2.*",
    "gmail-connector"
]

[project.scripts]
# sends all the args to commandline function, where the arbitary commands as processed accordingly
phydisk = "phydisk:commandline"

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/thevickypedia/PhyDisk"
Source = "https://github.com/thevickypedia/PhyDisk"
