[project]
name = "PyArchitecture"
dynamic = ["version"]
description = "Python module to get kernel information via OS specific CLI commands"
readme = "README.md"
authors = [{ name = "Vignesh Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Topic :: System :: Hardware",
]
keywords = ["physical-drives", "PyArchitecture"]
requires-python = ">=3.10"

[tool.setuptools]
packages = [
    "pyarchitecture",
    "pyarchitecture.cpu",
    "pyarchitecture.gpu",
    "pyarchitecture.disks",
    "pyarchitecture.memory",
]

[tool.setuptools.dynamic]
version = {attr = "pyarchitecture.version"}

[project.optional-dependencies]
dev = ["pre-commit"]

[project.scripts]
# sends all the args to commandline function, where the arbitary commands as processed accordingly
pyarchitecture = "pyarchitecture:commandline"

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/thevickypedia/PyArchitecture"
Source = "https://github.com/thevickypedia/PyArchitecture"
